--- a/clientes_frontend/src/app/componentes/listar-cliente/listar-clientes.html
+++ b/clientes_frontend/src/app/componentes/listar-cliente/listar-clientes.html
@@ -1,35 +1,64 @@
-<h2>Listado de Clientes</h2>
-<a [routerLink]="['/registro-cliente']">
-  <button>Registrar Cliente</button>
-</a>
-<table border="1" cellpadding="8" cellspacing="0">
-  <thead>
-    <tr>
-      <th>Documento</th>
-      <th>Nombre</th>
-      <th>Apellido</th>
-      <th>Fecha de Nacimiento</th>
-      <th>Ciudad</th>
-      <th>Correo Electrónico</th>
-      <th>Teléfono</th>
-      <th>Ocupación</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let cliente of clientes">
-      <td>{{ cliente.documento }}</td>
-      <td>{{ cliente.nombre }}</td>
-      <td>{{ cliente.apellidos }}</td>
-      <td>{{ cliente.fechaNacimiento }}</td>
-      <td>{{ cliente.ciudad }}</td>
-      <td>{{ cliente.correoElectronico }}</td>
-      <td>{{ cliente.telefono }}</td>
-      <td>{{ cliente.ocupacion }}</td>
-      <td>
-        <button [routerLink]="['/editar-cliente', cliente.documento]">Editar</button>
-        <button (click)="eliminar(cliente.documento)">Eliminar</button>
+<mat-toolbar color="primary">
+  <span>Listado de Clientes</span>
+  <span class="spacer"></span>
+  <button mat-raised-button color="accent" [routerLink]="['/registro-cliente']">
+    Registrar Cliente
+  </button>
+</mat-toolbar>
+
+<div class="tabla-container">
+  <table mat-table [dataSource]="clientes" class="mat-elevation-z8">
+    <ng-container matColumnDef="documento">
+      <th mat-header-cell *matHeaderCellDef> Documento </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.documento }} </td>
+    </ng-container>
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef> Nombre </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.nombre }} </td>
+    </ng-container>
+    <ng-container matColumnDef="apellidos">
+      <th mat-header-cell *matHeaderCellDef> Apellido </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.apellidos }} </td>
+    </ng-container>
+    <ng-container matColumnDef="fechaNacimiento">
+      <th mat-header-cell *matHeaderCellDef> Fecha Nacimiento </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.fechaNacimiento }} </td>
+    </ng-container>
+    <ng-container matColumnDef="ciudad">
+      <th mat-header-cell *matHeaderCellDef> Ciudad </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.ciudad }} </td>
+    </ng-container>
+    <ng-container matColumnDef="correoElectronico">
+      <th mat-header-cell *matHeaderCellDef> Email </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.correoElectronico }} </td>
+    </ng-container>
+    <ng-container matColumnDef="telefono">
+      <th mat-header-cell *matHeaderCellDef> Teléfono </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.telefono }} </td>
+    </ng-container>
+    <ng-container matColumnDef="ocupacion">
+      <th mat-header-cell *matHeaderCellDef> Ocupación </th>
+      <td mat-cell *matCellDef="let cliente"> {{ cliente.ocupacion }} </td>
+    </ng-container>
+    <ng-container matColumnDef="esViable">
+      <th mat-header-cell *matHeaderCellDef> Viable </th>
+      <td mat-cell *matCellDef="let cliente">
+        <span *ngIf="cliente.esViable" style="color: green; font-weight: bold;">Válido</span>
+        <span *ngIf="!cliente.esViable" style="color: red; font-weight: bold;">No Válido</span>
       </td>
-    </tr>
-  </tbody>
-</table>
+    </ng-container>
+    <ng-container matColumnDef="acciones">
+      <th mat-header-cell *matHeaderCellDef> Acciones </th>
+      <td mat-cell *matCellDef="let cliente">
+        <button mat-icon-button color="primary" [routerLink]="['/editar-cliente', cliente.documento]">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn" (click)="eliminar(cliente.documento)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="columnas"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnas;"></tr>
+  </table>
+</div>
